syntax = "proto3";

package coupon;

option go_package = "./proto";

// 定义 gRPC 服务
service CouponService {
  // 新增优惠券
  rpc AddNewCoupon(AddNewCouponRequest) returns (AddNewCouponResponse);

  // 验证优惠券
  rpc VerifyCoupon(VerifyCouponRequest) returns (VerifyCouponResponse);

  // 获取所有优惠券
  rpc GetAllCoupons(GetAllCouponsRequest) returns (GetAllCouponsResponse);

  // 启用/禁用优惠券
  rpc ActivateCoupon(ActivateCouponRequest) returns (ActivateCouponResponse);

  // 删除优惠券
  rpc DeleteCoupon(DeleteCouponRequest) returns (DeleteCouponResponse);

  rpc UpdateCoupon(UpdateCouponRequest) returns (UpdateCouponResponse);
}


message Timestamp2 {
  int64 seconds = 1;
  int32 nanos = 2;
}

// 定义 AddNewCoupon 请求
message AddNewCouponRequest {
  string name = 1;
  string code = 2;
  float percent_off = 3;
  int64 capacity = 4;
  int64 residue = 5;
  int64 per_user_limit = 6;
  int64 plan_limit = 7;
  int64 start_time = 8;  // 时间用字符串表示
  int64 end_time = 9;    // 时间用字符串表示
}

// 定义 AddNewCoupon 响应
message AddNewCouponResponse {
  int32 code = 1;
  string msg = 2;
}

// 定义 VerifyCoupon 请求
message VerifyCouponRequest {
  string coupon_code = 1;
  int64 plan_id = 2;
  int64 user_id = 3;
}

// 定义 VerifyCoupon 响应
message VerifyCouponResponse {
  int32 code = 1;
  bool verified = 2;
  string msg = 3;
  float percent_off = 4;
  string name = 5;
  int64 id = 6;
}

// 定义 GetAllCoupons 请求（没有字段）
message GetAllCouponsRequest {
  int64 page = 1;
  int64 size = 2;

}
// 定义 GetAllCoupons 响应
message GetAllCouponsResponse {
  int32 code = 1;
//  repeated CouponInfo coupon_list = 2;
  bytes coupon_list = 2;
  string msg = 3;
  int64 page_count = 4;
}

// 优惠券信息
message CouponInfo {
  int64 id = 1;
  string name = 2;
  string code = 3;
  bool enabled = 4;
  float percent_off = 5;
  int64 start_time = 6;  // 时间用字符串表示
  int64 end_time = 7;    // 时间用字符串表示
  int64 per_user_limit = 8;
  int64 capacity = 9;
  int64 residue = 10;
  int64 plan_limit = 11;
  Timestamp2 created_at = 12;
  Timestamp2 updated_at = 13;
  Timestamp2 deleted_at = 14;
}

// 定义 ActivateCoupon 请求
message ActivateCouponRequest {
  int64 id = 1;
  bool status = 2;
}

// 定义 ActivateCoupon 响应
message ActivateCouponResponse {
  int32 code = 1;
  string message = 2;
}

// 定义 DeleteCoupon 请求
message DeleteCouponRequest {
  int64 coupon_id = 1;
}

// 定义 DeleteCoupon 响应
message DeleteCouponResponse {
  int32 code = 1;
  string msg = 2;
}

message UpdateCouponRequest {
  int64 id = 1;
  string name = 2;
  string code = 3;
  float percent_off = 4;
  int64 capacity = 5;
  int64 residue = 6;
  int64 per_user_limit = 7;
  int64 plan_limit = 8;
  int64 start_time = 9;  // 时间用字符串表示
  int64 end_time = 10;    // 时间用字符串表示
}

message UpdateCouponResponse {
  int32 code = 1;
  string msg = 2;
}

